Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
1.4.0
-
None
-
None
-
linux fc5
Description
[heefre@heefre yahoo]$ valgrind --leak-check=full ./yahoosearch
[...]
==14571== ERROR SUMMARY: 0 errors from 0 contexts (suppressed: 51 from 1)
==14571== malloc/free: in use at exit: 759 bytes in 23 blocks.
==14571== malloc/free: 22,030 allocs, 22,007 frees, 2,724,009 bytes allocated.
==14571== For counts of detected errors, rerun with: -v
==14571== searching for pointers to 23 not-freed blocks.
==14571== checked 286,248 bytes.
==14571==
==14571== 16 bytes in 2 blocks are definitely lost in loss record 4 of 13
==14571== at 0x4005828: malloc (vg_replace_malloc.c:207)
==14571== by 0x408E97A: axis2_http_sender_get_param_string (http_sender.c:3274)
==14571== by 0x409187B: axis2_http_sender_send (http_sender.c:525)
==14571== by 0x408D764: axis2_http_transport_sender_write_message (http_transport_sender.c:769)
==14571== by 0x408E10D: axis2_http_transport_sender_invoke (http_transport_sender.c:309)
==14571== by 0x402B876: axis2_engine_send (engine.c:176)
==14571== by 0x4052787: axis2_op_client_two_way_send (op_client.c:1140)
==14571== by 0x4053F8C: axis2_op_client_execute (op_client.c:500)
==14571== by 0x40563F8: axis2_svc_client_send_receive_with_op_qname (svc_client.c:851)
==14571== by 0x40566B2: axis2_svc_client_send_receive (svc_client.c:949)
==14571== by 0x8048E58: main (yahoo_client.c:102)
==14571==
==14571==
==14571== 20 bytes in 1 blocks are definitely lost in loss record 5 of 13
==14571== at 0x4005828: malloc (vg_replace_malloc.c:207)
==14571== by 0x41232F2: axutil_http_chunked_stream_create (http_chunked_stream.c:47)
==14571== by 0x405F578: axis2_http_transport_utils_create_soap_msg (http_transport_utils.c:1862)
==14571== by 0x408D846: axis2_http_transport_sender_write_message (http_transport_sender.c:800)
==14571== by 0x408E10D: axis2_http_transport_sender_invoke (http_transport_sender.c:309)
==14571== by 0x402B876: axis2_engine_send (engine.c:176)
==14571== by 0x4052787: axis2_op_client_two_way_send (op_client.c:1140)
==14571== by 0x4053F8C: axis2_op_client_execute (op_client.c:500)
==14571== by 0x40563F8: axis2_svc_client_send_receive_with_op_qname (svc_client.c:851)
==14571== by 0x40566B2: axis2_svc_client_send_receive (svc_client.c:949)
==14571== by 0x8048E58: main (yahoo_client.c:102)
==14571==
==14571==
==14571== 32 bytes in 2 blocks are definitely lost in loss record 8 of 13
==14571== at 0x4005828: malloc (vg_replace_malloc.c:207)
==14571== by 0x411C606: axutil_url_encode (url.c:649)
==14571== by 0x408E9B7: axis2_http_sender_get_param_string (http_sender.c:3278)
==14571== by 0x409187B: axis2_http_sender_send (http_sender.c:525)
==14571== by 0x408D764: axis2_http_transport_sender_write_message (http_transport_sender.c:769)
==14571== by 0x408E10D: axis2_http_transport_sender_invoke (http_transport_sender.c:309)
==14571== by 0x402B876: axis2_engine_send (engine.c:176)
==14571== by 0x4052787: axis2_op_client_two_way_send (op_client.c:1140)
==14571== by 0x4053F8C: axis2_op_client_execute (op_client.c:500)
==14571== by 0x40563F8: axis2_svc_client_send_receive_with_op_qname (svc_client.c:851)
==14571== by 0x40566B2: axis2_svc_client_send_receive (svc_client.c:949)
==14571== by 0x8048E58: main (yahoo_client.c:102)
==14571==
==14571==
==14571== 204 (60 direct, 144 indirect) bytes in 1 blocks are definitely lost in loss record 10 of 13
==14571== at 0x4005828: malloc (vg_replace_malloc.c:207)
==14571== by 0x4093F51: axis2_http_client_create (http_client.c:60)
==14571== by 0x40915D3: axis2_http_sender_send (http_sender.c:325)
==14571== by 0x408D764: axis2_http_transport_sender_write_message (http_transport_sender.c:769)
==14571== by 0x408E10D: axis2_http_transport_sender_invoke (http_transport_sender.c:309)
==14571== by 0x402B876: axis2_engine_send (engine.c:176)
==14571== by 0x4052787: axis2_op_client_two_way_send (op_client.c:1140)
==14571== by 0x4053F8C: axis2_op_client_execute (op_client.c:500)
==14571== by 0x40563F8: axis2_svc_client_send_receive_with_op_qname (svc_client.c:851)
==14571== by 0x40566B2: axis2_svc_client_send_receive (svc_client.c:949)
==14571== by 0x8048E58: main (yahoo_client.c:102)
==14571==
==14571==
==14571== 91 bytes in 2 blocks are definitely lost in loss record 11 of 13
==14571== at 0x4005828: malloc (vg_replace_malloc.c:207)
==14571== by 0x4115DD9: axutil_strcat (string.c:408)
==14571== by 0x408EACA: axis2_http_sender_get_param_string (http_sender.c:3301)
==14571== by 0x409187B: axis2_http_sender_send (http_sender.c:525)
==14571== by 0x408D764: axis2_http_transport_sender_write_message (http_transport_sender.c:769)
==14571== by 0x408E10D: axis2_http_transport_sender_invoke (http_transport_sender.c:309)
==14571== by 0x402B876: axis2_engine_send (engine.c:176)
==14571== by 0x4052787: axis2_op_client_two_way_send (op_client.c:1140)
==14571== by 0x4053F8C: axis2_op_client_execute (op_client.c:500)
==14571== by 0x40563F8: axis2_svc_client_send_receive_with_op_qname (svc_client.c:851)
==14571== by 0x40566B2: axis2_svc_client_send_receive (svc_client.c:949)
==14571== by 0x8048E58: main (yahoo_client.c:102)
==14571==
==14571==
==14571== 128 bytes in 1 blocks are definitely lost in loss record 12 of 13
==14571== at 0x4005828: malloc (vg_replace_malloc.c:207)
==14571== by 0x40C3271: axis2_http_simple_request_get_body_bytes (http_simple_request.c:409)
==14571== by 0x40951E0: axis2_http_client_send (http_client.c:151)
==14571== by 0x4092D2B: axis2_http_sender_send (http_sender.c:1054)
==14571== by 0x408D764: axis2_http_transport_sender_write_message (http_transport_sender.c:769)
==14571== by 0x408E10D: axis2_http_transport_sender_invoke (http_transport_sender.c:309)
==14571== by 0x402B876: axis2_engine_send (engine.c:176)
==14571== by 0x4052787: axis2_op_client_two_way_send (op_client.c:1140)
==14571== by 0x4053F8C: axis2_op_client_execute (op_client.c:500)
==14571== by 0x40563F8: axis2_svc_client_send_receive_with_op_qname (svc_client.c:851)
==14571== by 0x40566B2: axis2_svc_client_send_receive (svc_client.c:949)
==14571== by 0x8048E58: main (yahoo_client.c:102)