Fixing memeory leaks reported in https://issues.apache.org/jira/browse/AXIS2C-1148.